HELOSK-91 Slack-logo to /icons, fixes to hero image height, H1 visible to front page

--- a/src/scss/layout/_x-column-template.scss
+++ b/src/scss/layout/_x-column-template.scss
@@ -1,6 +1,7 @@
 .post-template-default,
 .page-template-one-column-template,
 .page-template-two-column-template,
+.page-template-front-page-member-template,
 .page-template-archives,
 .archive,
 .error404,
